[project]
name = "openet-landsat-lst"
version = "0.2.1"
authors = [
    { name = "Yanghui Kang", email = "ykang38@wisc.edu" },
    { name = "Yun Yang", email = "yun.yang@msstate.edu" },
]
maintainers = [
    { name = "Charles Morton", email = "charles.morton@dri.edu" },
]
description = "Earth Engine based Landsat LST sharpening functions"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["LST", "OpenET", "Earth Engine", "Evapotranspiration", "Landsat"]
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "earthengine-api >= 0.1.367",
    "openet-core >= 0.4.0",
]

[project.urls]
"Homepage" = "https://github.com/Open-ET/openet-landsat-lst"
# "Repository" = "https://github.com/Open-ET/openet-landsat-lst.git"
# "Documentation" = "https://github.com/Open-ET/openet-landsat-lst"
# "Bug Tracker" = "https://github.com/Open-ET/openet-landsat-lst"
# "Changelog" = "https://github.com/Open-ET/openet-landsat-lst"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["openet*"]
exclude = ["examples*", "scripts*"]
