[project]
name = "openet-landsat-lst"
version = "0.3.0"
authors = [
    { name = "Yanghui Kang", email = "ykang38@wisc.edu" },
    { name = "Yun Yang", email = "yun.yang@msstate.edu" },
]
maintainers = [
    { name = "Charles Morton", email = "charles.morton@dri.edu" },
]
description = "Earth Engine based Landsat LST sharpening functions"
readme = "README.md"
requires-python = ">=3.9"
keywords = ["LST", "OpenET", "Earth Engine", "Evapotranspiration", "Landsat"]
license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "earthengine-api >= 1.5.2",
    "openet-core >= 0.7.0",
]

[project.urls]
"Homepage" = "https://github.com/Open-ET/openet-landsat-lst"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
include = ["openet*"]
exclude = ["examples*", "scripts*"]
